<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/bin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/scheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scheme"
            />

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            />

        <TextView
            android:id="@+id/brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            />

        <TextView
            android:id="@+id/prepaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prepaid"
            />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            />

        <TextView
            android:id="@+id/location_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_name"
            android:textColor="@color/white"
            android:background="@color/black"
            />

        <TextView
            android:id="@+id/bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank"
            />

        <TextView
            android:id="@+id/bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:textColor="@color/white"
            android:text="@string/bank_name"
            />

        <TextView
            android:id="@+id/bank_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:textColor="@color/white"
            android:text="@string/bank_url"
            />

        <TextView
            android:id="@+id/bank_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_phone"
            android:textColor="@color/white"
            android:background="@color/purple_200"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <EditText
        android:id="@+id/search_bin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pls_insert_your_bin_bank_card"
        android:imeOptions="actionSearch"
        android:inputType="number"
        android:maxLines="1"
        android:layout_marginHorizontal="20dp"
        android:importantForAutofill="yes"
        tools:ignore="Autofill" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/bin_item"
        />

</LinearLayout>